--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,7 @@
         const IMG = "images/mugs/";
         const DATA = [
             { key: "nouveautes", label: "Nouveautés", sub: [{ key: "arrivages", label: "Arrivages", items: [
-                { name: "Support Mobile Acrylique", ref: "SM 01", img: IMG+"tassebois.jpg", qtyType: "default" },
+                { name: "Support Mobile Acrylique", ref: "SM 01", img: IMG+"supportmobile.jpg", qtyType: "default" },
                 { name: "Bloc Note Similicuir", ref: "BNSA6", detail: "A6 (105 x 148)", img: IMG+"blocnotesimilicuir.jpg", qtyType: "blocnote" },
                 { name: "Bloc Note Similicuir", ref: "BNS5", detail: "A5 (148 x 210)", img: IMG+"blocnotesimilicuir.jpg", qtyType: "blocnote" }
             ]}]},
