--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,8 @@
     (function() {
         'use strict';
         // Images basées sur les noms exacts des fichiers
-        const IMG = "images/";";
+const IMG = "images/mugs/";
+
         const DATA = [
             { key: "nouveautes", label: "Nouveautés", sub: [{ key: "arrivages", label: "Arrivages", items: [
                 { name: "Support Mobile Acrylique", ref: "SM 01", img: IMG+"supportmobile.jpg", qtyType: "default" },
