--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@
     (function() {
         'use strict';
         // Images basées sur les noms exacts des fichiers
-const IMG = "images/mugs/";
+const IMG = "images/";
 
         const DATA = [
             { key: "nouveautes", label: "Nouveautés", sub: [{ key: "arrivages", label: "Arrivages", items: [
