--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@ const IMG = "images/";
                 { key: "metal", label: "Tasse Métal", items: [
                     { name: "Tasse Métal", ref: "TM 01", size: "300ml", color: "Blanc", img: IMG+"metalblanc.jpg", qtyType: "tasse" },
                     { name: "Tasse Métal", ref: "TM 02", size: "300ml", color: "Bleu", img: IMG+"metalbleu.jpeg", qtyType: "tasse" },
-                    { name: "Tasse Métal", ref: "TM 03", size: "300ml", color: "Jaune", img: IMG+"metaljaune.png", qtyType: "tasse" },
+                    { name: "Tasse Métal", ref: "TM 03", size: "300ml", color: "Jaune", img: IMG+"metaljaune.PNG", qtyType: "tasse" },
                     { name: "Tasse Métal", ref: "TM 04", size: "300ml", color: "Rouge", img: IMG+"metalrouge.jpg", qtyType: "tasse" }
                 ]}
             ]},
