--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <style>
         :root {
-            --white: #f8f8f8;
+            --white: #ffffff;
             --off-white: #f5f5f5;
             --sand: #f0f0f0;
             --sand-dark: #e8e2d9;
